@@ -1,6 +1,6 @@
 
 /*
- * $Id: providerDrv.c,v 1.77 2009/05/01 22:17:21 mchasal Exp $
+ * $Id: providerDrv.c,v 1.78 2009/08/19 23:00:07 mchasal Exp $
  *
  * © Copyright IBM Corp. 2005, 2007
  *
@@ -25,6 +25,7 @@
 #include <sys/resource.h>
 #include <unistd.h>
 #include <time.h>
+#include <pwd.h>
 #include <sys/stat.h>
 
 #include "trace.h"
@@ -551,7 +552,9 @@ static CMPIStatus getQualifierDeclMI(ProviderInfo *info, CMPIQualifierDeclMI **m
 */
 static int getProcess(ProviderInfo * info, ProviderProcess ** proc)
 {
-   int i;
+   int i,rc;
+   uid_t uid;
+   struct passwd *passwd;
    static int seq=0;
 
    _SFCB_ENTER(TRACE_PROVIDERDRV, "getProcess");
@@ -610,7 +613,28 @@ static int getProcess(ProviderInfo * info, ProviderProcess ** proc)
             setSignal(SIGUSR1, handleSigUsr1,0);
             
             setSignal(SIGSEGV, handleSigSegv,SA_ONESHOT);
-            
+
+            // If requested, change the uid of the provider
+            if (info->user) {
+                errno=0;
+                // Find the uid from the username
+                passwd=getpwnam(info->user);
+                if (passwd) {
+                    uid=passwd->pw_uid;
+                    _SFCB_TRACE(1,("--- Changing uid of provider, %s, to %d(%s)",info->providerName,uid,info->user));
+                    // Set the real and effective uids
+                    rc=setreuid(uid,uid);
+                    if (rc == -1) {
+                        mlogf(M_ERROR,M_SHOW,"Changing uid for %s failed.\n",info->providerName);
+                        _SFCB_RETURN(-1);
+                    }
+                } else {
+                    mlogf(M_ERROR,M_SHOW,"Couldn't resolve username %s. Errno: %d\n",info->user,errno);
+                    _SFCB_RETURN(-1);
+                }
+                    
+            }
+
             curProvProc=(*proc);
             resultSockets=sPairs[(*proc)->id+ptBase];
 
